--- a/dup-filter/src/styling/main.scss
+++ b/dup-filter/src/styling/main.scss
@@ -35,6 +35,42 @@
           margin: 4px;
           padding: 0;
         }
+
+        // main modal for each user
+        .modal {
+          position: fixed;
+          z-index: 4;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          overflow: auto;
+          transition: opacity 0.5s;
+          opacity: 1;
+        }
+
+        // modal when invisible
+        .modal.hide {
+          opacity: 0;
+          pointer-events: none;
+        }
+
+        // backdrop for each person/user modal card
+        .grayedBackdrop {
+          display: block;
+          position: fixed;
+          left: 0;
+          top: 0;
+          z-index: 9999;
+          width: 100%;
+          height: 100%;
+          padding-top: 100px;
+          background-color: rgb(0, 0, 0);
+          background-color: rgba(0, 0, 0, 0.4);
+          -webkit-transition: 0.5s;
+          overflow: auto;
+          transition: all 0.3s linear;
+        }
       }
     }
   }
